chore: Update image size and add captions for human tracking section

--- a/index.html
+++ b/index.html
@@ -186,23 +186,168 @@
     <section class="section">
         <div class="container is-max-desktop">
             <h2 class="title is-3">Tasks</h2>
+            <!-- humanstandup -->
             <div class="columns is-centered">
                 <div class="column">
                     <div class="content">
-                        <iframe src="static/html/human_tracking.html" width="500" height="400"
+                        <iframe src="static/html/humanstandup.html" width="500" height="400"
                             style="border:1px solid black;">
                             This browser does not support embedded HTML files.
                         </iframe>
-                        <div class="caption">Interactive View of Human Tracking</div>
+                        <div class="caption">Humanoid Standup</div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="content">
-                        <iframe src="static/html/human_tracking.html" width="500" height="400"
+                        <iframe src="static/html/humanstandup_diffusion.html" width="500" height="400"
                             style="border:1px solid black;">
                             This browser does not support embedded HTML files.
                         </iframe>
-                        <div class="caption">Interactive View of Human Tracking</div>
+                        <div class="caption">Humanoid Standup Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- pushT -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/pushT.html" width="500" height="400" style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Pushing Task</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/pushT_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Pushing Task Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- humanrun -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/humanrun.html" width="500" height="400" style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Humanoid Run</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div classcontent="">
+                        <iframe src="static/html/humanrun_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Humanoid Run Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- humantrack -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/humantrack.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Humanoid Jogging</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/humantrack_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Humanoid Jogging Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- halfcheetah -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/halfcheetah.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Half Cheetah</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/halfcheetah_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Half Cheetah Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- ant -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/ant.html" width="500" height="400" style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Ant</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/ant_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Ant Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- walker2d -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/walker2d.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Walker2d</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/walker2d_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Walker2d Diffusion Process</div>
+                    </div>
+                </div>
+            </div>
+            <!-- hopper -->
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/hopper.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Hopper</div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="content">
+                        <iframe src="static/html/hopper_diffusion.html" width="500" height="400"
+                            style="border:1px solid black;">
+                            This browser does not support embedded HTML files.
+                        </iframe>
+                        <div class="caption">Hopper Diffusion Process</div>
                     </div>
                 </div>
             </div>
