--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <span>Paper</span>
                                     </a>
                                 </span> -->
-                                <span class="link-block">
+                                <!-- <span class="link-block">
                                     <a href="https://arxiv.org/abs/2401.07369"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
@@ -88,7 +88,7 @@
                                         </span>
                                         <span>arXiv</span>
                                     </a>
-                                </span>
+                                </span> -->
                                 <!-- Video Link. -->
                                 <!-- <span class="link-block">
                                     <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
@@ -100,7 +100,7 @@
                                     </a>
                                 </span> -->
                                 <!-- Code Link. -->
-                                <span class="link-block">
+                                <!-- <span class="link-block">
                                     <a href="https://github.com/LeCAR-Lab/mbd"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
@@ -108,7 +108,7 @@
                                         </span>
                                         <span>Code</span>
                                     </a>
-                                </span>
+                                </span> -->
                             </div>
                         </div>
                     </div>
