--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title">Model-based Diffusion for Trajectory Optimization</h1>
-                        <div class="is-size-5 publication-authors">
+                        <!-- <div class="is-size-5 publication-authors">
                             <span class="author-block">
                                 <a href="https://panchaoyi.com">Chaoyi Pan</a><sup>*</sup>,
                             </span>
@@ -62,11 +62,11 @@
                             <span class="author-block">
                                 <a href="https://www.guannanqu.com">Guannan Qu</a>,
                             </span>
-                        </div>
+                        </div> -->
 
-                        <div class="is-size-5 publication-authors">
+                        <!-- <div class="is-size-5 publication-authors">
                             <span class="author-block">Carnegie Mellon University</span>
-                        </div>
+                        </div> -->
 
                         <div class="column has-text-centered">
                             <div class="publication-links">
