--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         Model-based Diffusion for Trajectory Optimization
     </title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-GF0QZBTPS3"></script> -->
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -49,37 +47,18 @@
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title">Model-based Diffusion for Trajectory Optimization</h1>
-                        <!-- <div class="is-size-5 publication-authors">
-                            <span class="author-block">
-                                <a href="https://panchaoyi.com">Chaoyi Pan</a><sup>*</sup>,
-                            </span>
-                            <span class="author-block">
-                                <a href="https://iscoyizj.github.io">Zeji Yi</a><sup>*</sup>,
-                            </span>
-                            <span class="author-block">
-                                <a href="http://www.gshi.me/">Guanya Shi</a>,
-                            </span>
-                            <span class="author-block">
-                                <a href="https://www.guannanqu.com">Guannan Qu</a>,
-                            </span>
-                        </div> -->
-
-                        <!-- <div class="is-size-5 publication-authors">
-                            <span class="author-block">Carnegie Mellon University</span>
-                        </div> -->
 
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <!-- PDF Link. -->
-                                <!-- <span class="link-block">
-                                    <a href="https://drive.google.com/file/d/1u964n8BeQnZhwXpms7hJx8DNDYjwxTxy/view?usp=share_link"
-                                        class="external-link button is-normal is-rounded is-dark">
+                                <span class="link-block">
+                                    <a href="" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
                                         </span>
                                         <span>Paper</span>
                                     </a>
-                                </span> -->
+                                </span>
                                 <!-- <span class="link-block">
                                     <a href="https://arxiv.org/abs/2401.07369"
                                         class="external-link button is-normal is-rounded is-dark">
@@ -100,15 +79,14 @@
                                     </a>
                                 </span> -->
                                 <!-- Code Link. -->
-                                <!-- <span class="link-block">
-                                    <a href="https://github.com/LeCAR-Lab/mbd"
-                                        class="external-link button is-normal is-rounded is-dark">
+                                <span class="link-block">
+                                    <a href="" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
                                         </span>
                                         <span>Code</span>
                                     </a>
-                                </span> -->
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -182,7 +160,7 @@
             <!--/ Paper video. -->
         </div>
     </section>
-    
+
     <section class="section">
         <div class="container is-max-desktop">
             <h2 class="title is-3">Tasks</h2>
@@ -231,7 +209,8 @@
             <div class="columns is-centered">
                 <div class="column">
                     <div class="content">
-                        <iframe src="static/html/humanrun.html" width="500" height="400" style="border:1px solid black;">
+                        <iframe src="static/html/humanrun.html" width="500" height="400"
+                            style="border:1px solid black;">
                             This browser does not support embedded HTML files.
                         </iframe>
                         <div class="caption">Humanoid Run</div>
@@ -334,8 +313,7 @@
             <div class="columns is-centered">
                 <div class="column">
                     <div class="content">
-                        <iframe src="static/html/hopper.html" width="500" height="400"
-                            style="border:1px solid black;">
+                        <iframe src="static/html/hopper.html" width="500" height="400" style="border:1px solid black;">
                             This browser does not support embedded HTML files.
                         </iframe>
                         <div class="caption">Hopper</div>
