--- a/index.html
+++ b/index.html
@@ -269,6 +269,137 @@
         </div>
     </section>
 
+    <!-- Why: explain why model-based diffusion is important -->
+    <!-- 1. generalize beyond the data  with model information -->
+    <section class="section">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <h2 class="title is-3">Why Model-Based Diffusion?</h2>
+                        <!-- MBD is data-free -->
+                        <p>
+                            <b>
+                                MBD can be data-free:
+                            </b>
+                            Diffusion-based planner depends on large-scale and high-quality data, which is not available or expensive for robots.
+                            MBD does not require data, which enables flexible trajectory generation without any data. 
+                        </p>
+                        <!-- MBD delivers good performance in short time -->
+                        <p>
+                            <b>
+                                MBD delivers good performance in short time:
+                            </b>
+                            MBD can generate high-quality motion plans for nonconvex and nonsmooth tasks within tens of seconds, whose performance is comparable to RL. Here are some examples:
+                        </p>
+                        <p>
+                            Interactive trajectories: 
+                            <a href="static/html/ant.html">Ant</a>
+                            <a href="static/html/halfcheetah.html">HalfCheetah</a>
+                            <a href="static/html/hopper.html">Hopper</a>
+                            <a href="static/html/walker2d.html">Walker2d</a>
+                            <a href="static/html/pushT.html">PushT</a>
+                            <a href="static/html/humantrack.html">Humanoid Jogging</a>
+                            <a href="static/html/humanstandup.html">Humanoid Standup</a>
+                            <a href="static/html/humanrun.html">Humanoid Run</a>
+                        </p>
+                        <p>
+                            Diffusion process: 
+                            <a href="static/html/ant_diffusion.html">Ant</a>
+                            <a href="static/html/halfcheetah_diffusion.html">HalfCheetah</a>
+                            <a href="static/html/hopper_diffusion.html">Hopper</a>
+                            <a href="static/html/walker2d_diffusion.html">Walker2d</a>
+                            <a href="static/html/pushT_diffusion.html">PushT</a>
+                            <a href="static/html/humantrack_diffusion.html">Humanoid Jogging</a>
+                            <a href="static/html/humanstandup_diffusion.html">Humanoid Standup</a>
+                            <a href="static/html/humanrun_diffusion.html">Humanoid Run</a>
+                        </p>
+                        <figure class="image">
+                            <img src="./static/images/results.png" alt="MBD"
+                                style="max-width: 100%;">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- What: explain what is model-based diffusion -->
+    <!-- compare with model-free one -->
+    <section class="section">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <h2 class="title is-3">What is Model-Based Diffusion?</h2>
+                        <!-- model-based diffusion is a zeroth-order optimization method -->
+                        <p>
+                            <b>
+                                MBD as a zeroth-order optimization method:
+                            </b>
+                            Given an optimization problem (which provides model information), MBD seeks for its global optimum through the diffusion process.
+                        </p>
+                        <!-- compare with model-free diffusion -->
+                        <p>
+                            <b>
+                                MBD vs. Model-free diffusion:
+                            </b>
+                        </p>
+                        <figure class="image">
+                            <img src="./static/images/compare.png" alt="MBD"
+                                style="max-width: 100%;">
+                            <p>
+                                MBD leverages model information to compute the score function
+                                explicitly, while model-free diffusion learns the score function from data.
+                            </p>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- How: explain how to implement model-based diffusion -->
+    <!-- 1. score function -->
+    <section class="section">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered">
+                <div class="column">
+                    <div class="content">
+                        <h2 class="title is-3">How does Model-Based Diffusion work?</h2>
+                        <!-- score esitimation -->
+                        <p>
+                            <b>
+                                Score function estimation:
+                            </b>
+                            We propose to compute the score function by leveraging the model information and Monte Carlo
+                            approximation.
+                        </p>
+                        <!-- backward process -->
+                        <p>
+                            <b>
+                                Denoising process:
+                            </b>
+                            We propose Monte Carlo score ascent (MCSA) to replace reverse SDE to run backward process to
+                            achieve faster convergence to the target distribution.
+                        </p>
+                        <!-- include pdf here -->
+                        <figure class="image">
+                            <img src="./static/images/mcsa.pdf" alt="Model-Based Diffusion" style="max-width: 100%;">
+                            <p>
+                                Reverse SDE vs. Monte Carlo score ascent (MCSA) on a synthetic highly non-convex
+                                objective function. (a) Synthesized objective function with multiple local minima. (b)
+                                The intermediate stage density. (c) Reverse SDE vs. MCSA: Background colors represent
+                                the density at different stages. MCSA converges faster due to larger step size and lower
+                                sampling noise while still capturing the multimodality.
+                            </p>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <section class="section" id="BibTeX">
