chore: Update image size and add captions for human tracking section

--- a/index.html
+++ b/index.html
@@ -55,11 +55,16 @@
                                 <a href="https://iscoyizj.github.io">Zeji Yi</a><sup>*</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="http://www.gshi.me/">Guanya Shi</a>,
+                                <a href="http://www.gshi.me/">Guanya Shi</a><sup>+</sup>,
                             </span>
                             <span class="author-block">
-                                <a href="https://www.guannanqu.com">Guannan Qu</a>,
+                                <a href="https://www.guannanqu.com">Guannan Qu</a><sup>+</sup>,
                             </span>
+                        </div>
+
+                        <div class="is-size-5 publication-authors">
+                            <span class="author-block"><sup>*</sup> Equal contribution</span>
+                            <span class="author-block"><sup>+</sup> Equal advising</span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
@@ -77,15 +82,15 @@
                                         <span>Paper</span>
                                     </a>
                                 </span> -->
-                                <!-- <span class="link-block">
+                                <span class="link-block">
                                     <a href="https://arxiv.org/abs/2401.07369"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
                                         </span>
-                                        <span>arXiv</span>
+                                        <span>arXiv (coming soon)</span>
                                     </a>
-                                </span> -->
+                                </span>
                                 <!-- Video Link. -->
                                 <!-- <span class="link-block">
                                     <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
@@ -98,7 +103,7 @@
                                 </span> -->
                                 <!-- Code Link. -->
                                 <span class="link-block">
-                                    <a href="" class="external-link button is-normal is-rounded is-dark">
+                                    <a href="https://github.com/LeCAR-Lab/model-based-diffusion" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
                                         </span>
