Update video section in index.html

--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
             <div class="columns is-centered has-text-centered">
                 <div class="column is-four-fifths">
                     <h2 class="title is-3">Video</h2>
-                    <div class="publication-video">
-                        <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0" frameborder="0"
-                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
+                    <!-- invert static/videos/intro.mov -->
+                    <video poster="" id="intro" autoplay controls muted loop playsinline height="100%">
+                        <source src="./static/videos/intro.mov" type="video/mp4">
+                    </video>
                 </div>
             </div>
 
