⚡ update pdf to jpg

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                         </p>
                         <!-- include pdf here -->
                         <figure class="image">
-                            <img src="./static/images/mcsa.pdf" alt="Model-Based Diffusion" style="max-width: 100%;">
+                            <img src="./static/images/mcsa.png" alt="Model-Based Diffusion" style="max-width: 100%;">
                             <p>
                                 Reverse SDE vs. Monte Carlo score ascent (MCSA) on a synthetic highly non-convex
                                 objective function. (a) Synthesized objective function with multiple local minima. (b)
