--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="columns is-centered">
                 <div class="column">
                     <div class="content">
-                        <h2 class="title is-3">How does Model-Based Diffusion work?</h2>
+                        <h2 class="title is-3">How Does Model-Based Diffusion Work?</h2>
                         <!-- model-based diffusion is a zeroth-order optimization method -->
                         <p>
                             <b>
@@ -395,7 +395,7 @@
             <div class="columns is-centered">
                 <div class="column">
                     <div class="content">
-                        <h2 class="title is-3">MBD vs. Model-free diffusion</h2>
+                        <h2 class="title is-3">MBD vs. Model-Free Diffusion</h2>
                         <!-- compare with model-free diffusion -->
                         <p>
                             MBD leverages model information to compute the score function
