--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <!-- PDF Link. -->
-                                <!-- <span class="link-block">
-                                    <a href="" class="external-link button is-normal is-rounded is-dark">
+                                <span class="link-block">
+                                    <a href="https://drive.google.com/file/d/1kPjD79Cfr9spWulWNVFMRHqTE-mjbGAp/view?usp=sharing" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
                                         </span>
                                         <span>Paper</span>
                                     </a>
-                                </span> -->
+                                </span>
                                 <span class="link-block">
                                     <a href="https://arxiv.org/abs/2401.07369"
                                         class="external-link button is-normal is-rounded is-dark">
